fixed spacing issue on index

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -72,6 +72,7 @@
         'phone';
         grid-template-columns: 1fr;
         
+        
         div{
             font-size: 1rem;
             margin: 0.5rem;
@@ -85,8 +86,14 @@
 
     main#home h1{
         margin-top: 10vh;
+        font-size: 5rem;        
     }
 
+    h2 {
+        &.sm-heading{
+                font-size: 1.25rem
+            }
+        }
     h1{
         &.lg-heading{
             font-size: 5rem;
@@ -94,7 +101,7 @@
     }
 
     main{
-        text-align: start;
+        text-align: center;
     }
 
 }
